Fix card pins in dark mode (#7480)

--- a/app/assets/stylesheets/_dark.scss
+++ b/app/assets/stylesheets/_dark.scss
@@ -450,3 +450,7 @@ html[data-dark='true'] {
 .recharts-rectangle.recharts-tooltip-cursor {
   opacity: 0.2;
 }
+
+#card-pin {
+  filter: invert(1);
+}
